--- a/notebooks_clean/RoomSearch.ipynb
+++ b/notebooks_clean/RoomSearch.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the following simple functions for dealing with rooms and positions:\n",
+    "### Load the following simple functions for dealing with rooms and positions:\n",
     "# `rect_to_segs((bottom, left), (width, height))`, `target_object_placed(room_assignment_dict)`,\n",
     "# `get_target_room(room_assignment_dict)`, `in_room(position, room)`, `room_containing(position, params)`,\n",
     "# `room_center(room)`, `taxi_dist_to_room_center(position, room)`, `nearest_unexplored_room(position, params, room_assignment_dict)`,\n",
@@ -69,6 +69,8 @@
     "\n",
     "# Construct a hotel environment with 4 rooms.\n",
     "(walls, bounding_box) = construct_hotel_env(4);\n",
+    "\n",
+    "# Get the rooms in the hotel; each is represented as a rectangle\n",
     "rooms = get_hotel_rooms(4);"
    ]
   },
@@ -597,11 +599,16 @@
     }
    ],
    "source": [
+    "# Convert the room rectangles to line segments.\n",
     "room_segs = vcat([rect_to_segs(room.bl, room.wh) for room in rooms]...)\n",
     "\n",
+    "# Also, get the rectangles for the 4 \"main\" hotel rooms.\n",
+    "# Later, we'll tell the agent that the object is in one of these \"main\" rooms\n",
+    "# (but not the hallways and closets).\n",
     "main_rooms = _rooms(4)\n",
     "sq_room_segs = vcat([rect_to_segs(room.bl, room.wh) for room in main_rooms]...);\n",
     "\n",
+    "# Visualize:\n",
     "using Plots\n",
     "plot(size=(250, 250), aspect_ratio=:equal, grid=false)\n",
     "plot!(walls, c=:black, linealpha=0.5, label=\"Walls\")\n",
@@ -614,7 +621,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ground truth world model"
+    "## Ground truth world model\n",
+    "\n",
+    "The POMDP state at each time t is a pair (agent position, target room).  The target room is the room in which the goal (\"target\") object is located.\n",
+    "\n",
+    "The target room is sampled at t=0 and never changes subsequently. The position changes at each time step.\n",
+    "\n",
+    "We assume that the agent knows where in the target room the target object will be.  (E.g. it was told, \"get my keys from my room; they're on my bedside table\".)  So the only uncertainty it needs to disambiguate regarding the object position is _which_ room it is in, not where in the room it is.  (This is a simplification I made to simplify the problem on my first pass--but I haven't gotten to removing the simplification yet.)"
    ]
   },
   {
@@ -717,6 +730,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this environment, the sensor model is based on a ray-tracer from the agent's positions to all the other objects in the environment.  All the objects are to be represented as line segments.  So, we need to pass the sensor model the concatenation of the \"map\" (the line segments corresponding to the hotel walls), with line segments at the location of the target object.  (In this demo, we'll say the target object is a square.)\n",
+    "\n",
+    "So -- the agent _can_ see the target object, with its LiDAR sensor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -737,7 +760,7 @@
     "includet(\"RoomSearch/sensor_model_utils.jl\")\n",
     "\n",
     "# This observation model generates noisy LIDAR measurements\n",
-    "# from the agent to the surrounding walls.\n",
+    "# from the agent to the surrounding walls, and to the target object.\n",
     "# See the visuals below.\n",
     "@gen function world_sensor_model(state, params)\n",
     "    (pos, target_room) = state\n",
@@ -787,7 +810,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### World Parameters"
+    "### World Parameters\n",
+    "\n",
+    "Note that we tell the agent \n",
+    "1. What all the rooms are\n",
+    "2. Which rooms it is possible the target object is in\n",
+    "3. Where the target object is in one of those rooms\n",
+    "4. The map\n",
+    "\n",
+    "In future demos we would want to have the agent begin with uncertainty about these things, and disambiguate through observation."
    ]
   },
   {
@@ -828,7 +859,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agent's mental model of the environment"
+    "## Agent's mental model of the environment\n",
+    "\n",
+    "Below, I define a different POMDP enviornment model.  It is similar to the one above, but I have designed it to facilitate the following way of reasoning about which room the object is in.  In the model I defined above, the agent would have to decide, at t=0, which room the object is in. But the reasoning strategy we want is for the agent to decide, each time it enters a room, if the object is in that room.\n",
+    "\n",
+    "So, this variant of the model is written so that the choice of which room the target object is in is factored into a dictionary whose keys are a subset of `[obj_is_in_room1, obj_is_in_room2, ..., obj_is_in_roomN]` and boolean values.  The initial distribution instantiates an empty dictionary, and the mental POMDP step model updates this dictionary every time the agent enters a new room, by sampling a boolean value for the key corresponding to that room.\n",
+    "\n",
+    "I was inspired to write the model in this way by the semantics of open-universe probabilistic models in languages like BLOG, or the GenWorldModels extension to Gen which I developed with Alex Lew and other collaborators.  The semantics I am emulating here are called \"Minimal Self-Supporting Instantiation\" (MSSI) semantics.  When a probabilistic model is written with these semantics, when running inference, a probabilistic programming system will not instantiate values for variables which are independent of the query variables and the observation variables, in the current latent assignment.  In this notion page - https://georgematheos.notion.site/Sketch-Automatic-Uncertainty-Management-for-Agents-in-Contingent-Bayesian-Network-Environments-a2146a78ff084258a48ce07af4879ce0?pvs=4 - I wrote a draft of what an agent's mental model might look like for a room navigation task, using GenWorldModels [+ one other feature not currently built into it, the `@instantiated` accessor].  This model is written so the instantiations should not commit to where on the map the object is if all the agent has seen is where it is _in the room it is in_ (since there may be multiple identical rooms).  I did this while thinking about if there is a way to automate some of the inference strategies used in these demos, for arbitrary models written to exploit MSSI semantics, but I haven't gotten super far along that line of thinking yet."
    ]
   },
   {
@@ -843,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -862,6 +899,7 @@
     "    mins, maxs = params.bounding_box\n",
     "    pos ~ mvuniform(mins, maxs)\n",
     "\n",
+    "    # Dict containing, for each room we've visited: is the target object in the room, or not?\n",
     "    room_placements = PersistentArrayMap{Any, Any}()\n",
     "    \n",
     "    # POMDP state: agent position; which room the target object is in;\n",
@@ -920,17 +958,18 @@
    "source": [
     "# If the agent has entered a new room, instantiate a choice of whether\n",
     "# the agent is in this room.\n",
+    "# Returns: (updated room placements, boolean:did we add a new entry)\n",
     "@gen function extend_placements(pos, room_placements, params)\n",
     "    room = room_containing(pos, params)\n",
     "    if haskey(room_placements, room) || !(room in params.viable_rooms)\n",
     "        return (room_placements, false)\n",
     "    end\n",
     "\n",
-    "    p_in_room = (1 - params.p_no_object) / (length(params.viable_rooms) - length(room_placements))\n",
+    "    p_in_room = target_object_placed(room_placements) ? 0. : (1 - params.p_no_object) / (length(params.viable_rooms) - length(room_placements))\n",
     "    object_is_in_room ~ bernoulli(p_in_room)\n",
     "\n",
     "    newmap = assoc(room_placements, room, object_is_in_room)\n",
-    "    \n",
+    "\n",
     "    return (newmap, true)\n",
     "end"
    ]
@@ -954,6 +993,9 @@
     "@gen function mental_sensor_model(state, params)\n",
     "    (pos, room_placements) = state\n",
     "\n",
+    "    # If the target object is placed, we will be able to see it;\n",
+    "    # if we haven't instantiated a location for the target object yet,\n",
+    "    # assume we will just see the walls.\n",
     "    if target_object_placed(room_placements)\n",
     "        target_room = get_target_room(room_placements)\n",
     "        target_object_segments = segments_for_object_in(target_room, params.target_pose_relative_to_room)\n",
@@ -1063,7 +1105,7 @@
    "outputs": [],
    "source": [
     "# PF update method which instantiates 2 particles, one positing that an object is in the newly entered room,\n",
-    "# and one positing it is not.  (This is 'stratified' since it always makes both choices.)\n",
+    "# and one positing it is not.  (This is 'stratified' since it always instantiates two particles, covering both choices.)\n",
     "\n",
     "stratified_pf_update = @get_stratified_pf_update(mental_pomdp, MENTAL_MODEL_PARAMS, update_grid_args, initialization_grid_args);"
    ]
@@ -1224,6 +1266,7 @@
     "        goal = room_center(room_to_explore)\n",
     "    end\n",
     "\n",
+    "    # Plan to the goal and take the first action in that plan.\n",
     "    goal = [goal[1], goal[2]] # convert tuple -> vector\n",
     "    action = find_action_using_grid_search(planning_params, currentpos(new_tr), Vector(goal))\n",
     "    action = handle_sticking(prev_pf_state, prev_action, pf_state, action)::Symbol\n",
@@ -1243,7 +1286,7 @@
    "source": [
     "## Demo!\n",
     "\n",
-    "[Sometimes it is all slow to run on the first pass, due to the way Julia JIT compiles things -- and the fact that this plotting library is not super fast.]"
+    "[For those running the code -- don't worry if it is all slow to run on the first pass; this is due to the way Julia JIT compiles things.  Should be a lot faster after that (though plotting animations remains slow for me, due to the plotting library).]"
    ]
   },
   {
@@ -1303,8 +1346,10 @@
    "source": [
     "# Start the agent off in a hallway.\n",
     "INITIAL_POS = [6.5, 4*5 - 2];\n",
-    "INITIAL_ROOM = square_rooms[1];\n",
+    "INITIAL_ROOM = square_rooms[1]; # Put the object in the bottom room\n",
     "\n",
+    "# Generate a rollout trace with just 1 timestep, constraining the random state\n",
+    "# to place the object and target object in the locations determined above.\n",
     "rollout_tr = Gen.generate(rollout_model, (0, PARAMS), \n",
     "    choicemap(\n",
     "        (GenPOMDPs.state_addr(0, :pos), INITIAL_POS),\n",
@@ -1587,7 +1632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize when the agent is considering multiple hypotheses (when exploring rooms):"
+    "Visualize when the agent is considering multiple hypotheses.  (That is, when its particle filter state resizes to 2 particles, when exploring rooms.)"
    ]
   },
   {
@@ -1723,8 +1768,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-- Can do a variant of the marginal likelihood estimate thresholding from the Kidnapped Robot demo.  Here, have to be a little more careful, sin"
+    "I can do a variant of the marginal likelihood estimate thresholding from the Kidnapped Robot demo.  Here, I will have to be a little more careful, so that the agent recognizes when there is ambiguity about its location (after a kidnapping), so it doesn't fill in its table of which rooms it has visited, and which it hasn't, incorrectly."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
