initial cognitive experiments

--- a/notebooks_messy/PlayableContinuous.ipynb
+++ b/notebooks_messy/PlayableContinuous.ipynb
@@ -49,6 +49,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "id": "5c0fea3a-5748-479d-a252-85de2bbcb9c7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "includet(\"SLAM/Utils.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "313c14b7-1f1d-4698-b01c-eec1933bb749",
    "metadata": {
@@ -287,37 +299,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "61712fbf-28ae-4b69-a222-3ba82278e6fc",
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "i = uniform_discrete(1, 20) # Random enviornment index\n",
-    "mp = GridWorlds.load_houseexpo_gridworld(24, i)\n",
-    "_PARAMS = (;\n",
-    "    map = mp,\n",
-    "    step = (; Δ = 0.5, σ = 0.005 ), # step model arguments\n",
-    "    obs = (; fov = 2π, n_rays = 40,  # obs model arguments\n",
-    "        orientation=π/2,\n",
-    "        sensor_args = (;\n",
-    "            w = 5, s_noise = 0.02,\n",
-    "            outlier = 0.0001, outlier_vol = 100.0,\n",
-    "            zmax = 100.0, σ=0.005\n",
-    ")));\n",
-    "\n",
-    "struct ConstantTToParams\n",
-    "    params\n",
-    "end\n",
-    "(p::ConstantTToParams)(t) = p.params\n",
-    "T_TO_PARAMS = ConstantTToParams(_PARAMS)\n",
-    "T_TO_PARAMS(0);"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "12a7671c-410e-4012-9e5c-d008bf4196ae",
    "metadata": {
     "tags": []
@@ -329,7 +321,7 @@
        "get_obs_seq (generic function with 1 method)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,19 +407,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 257,
+   "id": "503d089d-b461-4115-9b73-f726dafe279a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# 1, 18\n",
+    "i = uniform_discrete(1, 20)\n",
+    "mp = GridWorlds.load_houseexpo_gridworld(24, i)\n",
+    "\n",
+    "# mp = GridWorlds.load_custom_map(2)\n",
+    "_PARAMS = (;\n",
+    "    map = mp,\n",
+    "    step = (; Δ = .5, σ = 0.005,),\n",
+    "        #0.5 * 120/24, σ = 0.005 ), # step model arguments\n",
+    "    obs = (; fov = 2π, n_rays = 40,  # obs model arguments\n",
+    "        orientation=π/2,\n",
+    "        sensor_args = (;\n",
+    "            w = 5, s_noise = 0.02,\n",
+    "            outlier = 0.0001, outlier_vol = 100.0,\n",
+    "            zmax = 100.0, σ=0.005\n",
+    ")));\n",
+    "\n",
+    "struct ConstantTToParams\n",
+    "    params\n",
+    "end\n",
+    "(p::ConstantTToParams)(t) = p.params\n",
+    "T_TO_PARAMS = ConstantTToParams(_PARAMS)\n",
+    "T_TO_PARAMS(0);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "world_trace, take_action = GenPOMDPs.interactive_world_trace(trajectory_model, T_TO_PARAMS);"
+    "world_trace, take_action = GenPOMDPs.interactive_world_trace(\n",
+    "    trajectory_model, T_TO_PARAMS,\n",
+    "    # choicemap((GenPOMDPs.state_addr(0, :cell), (30, 5)))  \n",
+    ");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 259,
    "id": "6928fdaa-6f1c-41ae-b287-6b1c66913a8d",
    "metadata": {
     "tags": []
@@ -439,16 +468,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace serialized to saves/2023-12-12T15:51:18.757__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -462,30 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 146,
    "id": "d780800c-4e55-40df-ad82-16e46a3408bc",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "i = 1"
+    "# i = "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 248,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -497,7 +508,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 260,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -525,7 +536,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,13 +547,14 @@
     "    take_action,\n",
     "    show_lines_to_walls=false,\n",
     "    save_fn=get_save_tr(world_trace),\n",
+    "    framerate=8\n",
     ")\n",
     "display(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 255,
    "id": "580526c3-8882-4ac5-bf80-5b6284041934",
    "metadata": {},
    "outputs": [
@@ -552,7 +564,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 256,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -578,37 +590,33 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Animating]\n",
-      "Trace serialized to saves/2023-12-12T16:03:19.086__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
     "tr2 = Utils.deserialize_pomdp_trace(\n",
-    "    \"saves/2023-12-12T15:51:18.757__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T15:51:18.757__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T16:47:41.689__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T17:07:55.823__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-12T17:10:15.804__pomdp_trace.jld\",\n",
     "    trajectory_model,\n",
     "    # args_from_serializeable=(args -> (args[0:1]..., ConstantTToParams(args[2])))\n",
     "    );\n",
     "trace2, take_action2 = GenPOMDPs.make_trace_interactive(tr2);\n",
     "\n",
-    "# (f, t) = GridWorlds.Viz.interactive_gui(\n",
-    "#     get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
-    "#     save_fn=get_save_tr(trace2)\n",
-    "# )\n",
-    "(f, t) = GridWorlds.Viz.play_as_agent_gui(\n",
-    "    get_obs_seq(trace2),\n",
-    "    take_action2,\n",
-    "    show_lines_to_walls=false,\n",
-    "    save_fn=get_save_tr(trace2),\n",
+    "(f, t) = GridWorlds.Viz.interactive_gui(\n",
+    "    get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
+    "    save_fn=get_save_tr(trace2)\n",
     ")\n",
+    "# (f, t) = GridWorlds.Viz.play_as_agent_gui(\n",
+    "#     get_obs_seq(trace2),\n",
+    "#     take_action2,\n",
+    "#     show_lines_to_walls=false,\n",
+    "#     save_fn=get_save_tr(trace2),\n",
+    "#     framerate=8\n",
+    "# )\n",
     "display(f)\n",
     "# trace2, take_action2 = GenPOMDPs.make_trace_interactive(tr2);"
    ]
