--- a/notebooks_messy/PlayableContinuous.ipynb
+++ b/notebooks_messy/PlayableContinuous.ipynb
@@ -407,7 +407,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 261,
+   "id": "d760d779-4420-4733-a571-e1088f3a22ac",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "struct ConstantTToParams\n",
+    "    params\n",
+    "end\n",
+    "(p::ConstantTToParams)(t) = p.params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "id": "b3f357a0-fb41-48e4-be7b-160fa53c3707",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "struct SwitchTToParams\n",
+    "    params1\n",
+    "    params2\n",
+    "    switch\n",
+    "end\n",
+    "(p::SwitchTToParams)(t::Makie.Observable) = p(t[])\n",
+    "(p::SwitchTToParams)(t) = p.switch(t) ? p.params1 : p.params2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -415,11 +448,15 @@
    "outputs": [],
    "source": [
     "# 1, 18\n",
-    "i = uniform_discrete(1, 20)\n",
-    "mp = GridWorlds.load_houseexpo_gridworld(24, i)\n",
+    "DO_CUSTOM_MAP = true\n",
     "\n",
-    "# mp = GridWorlds.load_custom_map(2)\n",
-    "_PARAMS = (;\n",
+    "if !DO_CUSTOM_MAP\n",
+    "    i = uniform_discrete(1, 20)\n",
+    "    mp = GridWorlds.load_houseexpo_gridworld(24, i)\n",
+    "else\n",
+    "    mp = GridWorlds.load_custom_map(2)\n",
+    "end\n",
+    "_PARAMS_CLEAN = (;\n",
     "    map = mp,\n",
     "    step = (; Δ = .5, σ = 0.005,),\n",
     "        #0.5 * 120/24, σ = 0.005 ), # step model arguments\n",
@@ -431,32 +468,47 @@
     "            zmax = 100.0, σ=0.005\n",
     ")));\n",
     "\n",
-    "struct ConstantTToParams\n",
-    "    params\n",
-    "end\n",
-    "(p::ConstantTToParams)(t) = p.params\n",
-    "T_TO_PARAMS = ConstantTToParams(_PARAMS)\n",
+    "\n",
+    "_PARAMS_NOISY = (;\n",
+    "    map = mp,\n",
+    "    step = (; Δ = .5, σ = 0.35,),\n",
+    "        #0.5 * 120/24, σ = 0.005 ), # step model arguments\n",
+    "    obs = (; fov = 2π, n_rays = 40,  # obs model arguments\n",
+    "        orientation=π/2,\n",
+    "        sensor_args = (;\n",
+    "            w = 5, s_noise = 0.02,\n",
+    "            outlier = 0.0001, outlier_vol = 100.0,\n",
+    "            zmax = 100.0, σ=0.5\n",
+    ")));\n",
+    "\n",
+    "T_TO_PARAMS = SwitchTToParams(_PARAMS_CLEAN, _PARAMS_NOISY, t -> t < 60) #t < 50 || t > 150)\n",
     "T_TO_PARAMS(0);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 354,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "world_trace, take_action = GenPOMDPs.interactive_world_trace(\n",
-    "    trajectory_model, T_TO_PARAMS,\n",
-    "    # choicemap((GenPOMDPs.state_addr(0, :cell), (30, 5)))  \n",
-    ");"
+    "if DO_CUSTOM_MAP\n",
+    "    world_trace, take_action = GenPOMDPs.interactive_world_trace(\n",
+    "        trajectory_model, T_TO_PARAMS,\n",
+    "        choicemap((GenPOMDPs.state_addr(0, :cell), (30, 5)))  \n",
+    "    );\n",
+    "else\n",
+    "    world_trace, take_action = GenPOMDPs.interactive_world_trace(\n",
+    "        trajectory_model, T_TO_PARAMS,\n",
+    "    );\n",
+    "end;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 355,
    "id": "6928fdaa-6f1c-41ae-b287-6b1c66913a8d",
    "metadata": {
     "tags": []
@@ -468,7 +520,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 355,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 338,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -508,7 +560,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 356,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -536,7 +588,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 357,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -590,9 +642,16 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 256,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Animating]\n"
+     ]
     }
    ],
    "source": [
@@ -600,23 +659,28 @@
     "    # \"saves/2023-12-12T15:51:18.757__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T16:47:41.689__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T17:07:55.823__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-12T17:10:15.804__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T17:10:15.804__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-12T17:45:51.846__pomdp_trace.jld\",\n",
     "    trajectory_model,\n",
-    "    # args_from_serializeable=(args -> (args[0:1]..., ConstantTToParams(args[2])))\n",
+    "    args_from_serializeable=(args -> (\n",
+    "            args[1:2]...,\n",
+    "            SwitchTToParams(_PARAMS_CLEAN, _PARAMS_NOISY, t -> t < 60 || t > 325)\n",
+    "        ))\n",
     "    );\n",
     "trace2, take_action2 = GenPOMDPs.make_trace_interactive(tr2);\n",
     "\n",
-    "(f, t) = GridWorlds.Viz.interactive_gui(\n",
-    "    get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
-    "    save_fn=get_save_tr(trace2)\n",
-    ")\n",
-    "# (f, t) = GridWorlds.Viz.play_as_agent_gui(\n",
-    "#     get_obs_seq(trace2),\n",
-    "#     take_action2,\n",
-    "#     show_lines_to_walls=false,\n",
+    "# (f, t) = GridWorlds.Viz.interactive_gui(\n",
+    "#     get_args(trace2[])[3](0).map, get_posobs_seq(trace2), take_action2,\n",
     "#     save_fn=get_save_tr(trace2),\n",
     "#     framerate=8\n",
     "# )\n",
+    "(f, t) = GridWorlds.Viz.play_as_agent_gui(\n",
+    "    get_obs_seq(trace2),\n",
+    "    take_action2,\n",
+    "    show_lines_to_walls=false,\n",
+    "    save_fn=get_save_tr(trace2),\n",
+    "    framerate=8\n",
+    ")\n",
     "display(f)\n",
     "# trace2, take_action2 = GenPOMDPs.make_trace_interactive(tr2);"
    ]
