--- a/notebooks_messy/PlayableContinuous.ipynb
+++ b/notebooks_messy/PlayableContinuous.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "id": "503d089d-b461-4115-9b73-f726dafe279a",
    "metadata": {
     "tags": []
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 136,
    "id": "9321f581-3f9d-404a-8689-0f7f279596c0",
    "metadata": {
     "tags": []
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 137,
    "id": "6928fdaa-6f1c-41ae-b287-6b1c66913a8d",
    "metadata": {
     "tags": []
@@ -441,7 +441,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 133,
    "id": "31143f7c-4f46-4aa9-a409-63fcf112224d",
    "metadata": {
     "tags": []
@@ -478,16 +478,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-12T21:02:18.894__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -510,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 138,
    "id": "82e17666-8874-4c0e-abea-338c63a99a91",
    "metadata": {
     "tags": []
@@ -522,7 +515,7 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 141,
    "id": "665b91b1-9622-41ed-b963-3bee730df746",
    "metadata": {},
    "outputs": [
@@ -591,16 +584,9 @@
        "GLMakie.Screen(...)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trace & viz actions serialized to saves/2023-12-12T21:05:45.266__pomdp_trace.jld.\n"
-     ]
     }
    ],
    "source": [
@@ -618,7 +604,15 @@
     "    # \"saves/2023-12-12T20:49:13.392__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T20:52:10.206__pomdp_trace.jld\",\n",
     "    # \"saves/2023-12-12T21:02:18.894__pomdp_trace.jld\",\n",
-    "    \"saves/2023-12-12T21:00:33.101__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T21:00:33.101__pomdp_trace.jld\",\n",
+    "    # \"saves/2023-12-12T20:49:13.392__pomdp_trace.jld\",\n",
+    "    \"saves/2023-12-12T20:52:10.206__pomdp_trace.jld\",\n",
+    "\n",
+    "    # clean version - saves/2023-12-12T20:52:10.206__pomdp_trace.jld\n",
+    "    # noisy version - saves/2023-12-12T20:49:13.392__pomdp_trace.jld\n",
+    "\n",
+    "    # map 18 - clean - saves/2023-12-12T21:00:33.101__pomdp_trace.jld\n",
+    "    # map 18 - noisy - saves/2023-12-12T21:02:18.894__pomdp_trace.jld\n",
     "    trajectory_model,\n",
     "    args_from_serializeable=(args -> (\n",
     "            args[1:2]...,\n",
